Fix bg and logo size on mobile screen for smooth responsiveness

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
 }
 .banner{
     background-color: #63776d;
+    color: #fff;
+    font: normal 400 18px "Noto Sans", sans-serif;
+    text-align: center;
     width: 100vw;
     height: 6vh;
     position:fixed;
@@ -72,12 +75,13 @@ header{
 .logo-wrap{
     display: flex;
     align-items: center;
-    width: 30%;
+    width: 30vw;
     height: 10vh;
+    margin-left: 10vw;
 
 }
 .logo-img{
-    background: url(assets/yvette-logo.png) center/cover no-repeat;
+    background: url(assets/yvette-logo.png) center/contain no-repeat;
     width: 100%;
     height: 100%;
 }
@@ -90,7 +94,7 @@ header{
 }
 
 .mobile-menu{
-    background-color: #E4DBEB;
+    background-color: #0E2C25;
     height: 100vh;
     width: 100%;
     max-width: 100%;
@@ -107,13 +111,25 @@ header{
     z-index: 120;
 }
 
+.mobile-menu ul{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    list-style: none;
+}
+.ham-items{
+    text-decoration: none;
+    font: normal 400 30px "Nunito Sans", sans-serif;
+    color: #fff;
+}
+
 .mobile-menu.active{
     right: 0;
 }
 
 .ham-menu{
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 40px;
     margin-left:auto;
     position: relative;
     z-index: 150;
@@ -140,13 +156,15 @@ header{
 .ham-menu.active span:nth-child(1){
     top: 50%;
     transform: translate(-50%, -50%) rotate(45deg);
+    background-color: #fff;
 }
 .ham-menu.active span:nth-child(2){
     opacity: 0;
 }
 .ham-menu.active span:nth-child(3){
     top: 50%;
-    transform: translate(-50%, -0%) rotate(-45deg);
+    transform: translate(-50%, -50%) rotate(-45deg);
+    background-color: #fff
 }
 
 body.active{
